--- a/ApiExcel/ApiExcel/ApiExcel.csproj
+++ b/ApiExcel/ApiExcel/ApiExcel.csproj
@@ -7,7 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3"/>
+        <PackageReference Include="IronXL.Excel" Version="2022.9.8711" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.9">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ApiExcel.DAL\ApiExcel.DAL.csproj" />
     </ItemGroup>
 
     <PropertyGroup>
